--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
-.iframe{
-    height: 50;
-    width: 50;
-    border-radius: 10;
+
+iframe {
+    width: 62vw;
+    height: 62%;
+    object-fit: cover;
+    background-color: rgb(0, 255, 76);
 }
