centrage bouton volume

--- a/style.css
+++ b/style.css
@@ -1,7 +1,26 @@
 
 iframe {
-    width: 62vw;
-    height: 62%;
+    position: absolute;
+    min-width: 178px !important;
+    width: 30vw;
+    height: 50px;
     object-fit: cover;
-    background-color: rgb(0, 255, 76);
+    background-color: rgba(0, 0, 0, 0);
+    z-index: 9998;
+    border-radius: 5px;
+    display: block;
+}
+
+#container{
+    position: absolute;
+}
+
+#block{
+    position: absolute;
+    min-width: 178px !important;
+    left: 84px;
+    width: 26vw;
+    height: 65px;
+    background-color: rgb(255, 255, 255);
+    z-index: 9999;
 }
