changement design background incrustation visuelle web app

--- a/style.css
+++ b/style.css
@@ -21,6 +21,6 @@
     left: 84px;
     width: 26vw;
     height: 65px;
-    background-color: rgb(255, 255, 255);
+    background-color: #153F46;
     z-index: 9999;
 }
