essais responsive sur le iframe niveau (if you pay peanuts you get monkeys dear recruters)

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     position: absolute;
     min-width: 178px !important;
     width: 30vw;
-    height: 48px;
+    height: 18vh;
     object-fit: cover;
     background-color: rgba(0, 0, 0, 0);
     z-index: 998;
