--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,14 @@
 html{
-    background-color: aqua;
+    background-color: rgb(219, 229, 229);
+}
+
+.buttonMikeTools{
+    margin: auto;
+    margin-left: 7px;
+    margin-right: 7px;
+    height: 40px !important;
+    width: 40px !important;
+    background-color: rgba(255, 0, 0, 0.544);
+    border-radius: 50px;
+    cursor: pointer;
 }
