correction initilisation channel, ajout elements html pour afficher l'etat et les éventuelles erreurs du stream

--- a/src/style.css
+++ b/src/style.css
@@ -13,3 +13,14 @@ html{
     border-radius: 50px;
     cursor: pointer;
 }
+
+.main {
+    text-align: center;
+}
+
+video {
+    width: 0vw;
+    height: 0vh;
+    object-fit: cover;
+    background-color: black;
+}
